# spp-dcj

./: .gitignore  README.md  pyproject.toml
example/: run.sh
scripts/: spp-dcj
spp_dcj/: construct_ilp.py  data_utils.py
src/spp_dcj/: cli.py  compute_initial.py  sol2adjacencies.py
